# C-NeuralNet

./: CMakeLists.txt  Makefile  README.md  main.cpp
matrix/: Makefile  matrix.cpp  matrix.hpp  test_matrix.cpp
network/: Makefile  network.cpp  network.hpp  test_net.cpp
parser/: Makefile  idx_header.cpp  idx_header.hpp  parser.cpp
